# dfraw_json_parser

./: .gitignore  .renovaterc  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  _typos.toml  creature.ts  creature_domestic.txt  examples.ps1  examples.sh  package.json  parse.pl  parse.ts  parsed-raws.json  pnpm-lock.yaml  regular-expressions.ts  run-perl.ps1  run-rust.ps1  run.ps1  search.html  temp.json  token_definitions.json  typing.d.ts  typos.toml  update_bindings  update_bindings.ps1
cli/: CHANGELOG.md  Cargo.toml  README.md  creature_standard.json  example.ps1  example.sh  unprocessed_raws.json  vanilla.json
cli/src/: main.rs
lib/: CHANGELOG.md  Cargo.toml
lib/bindings/: AllBindings.d.ts  Biome.d.ts  BodySize.d.ts  BodySize.ts  Caste.d.ts  Caste.ts  CasteTag.ts  Color.d.ts  Color.ts  ColorModificationToken.d.ts  ConditionToken.d.ts  Creature.d.ts  Creature.ts  CreatureCasteToken.d.ts  CreatureEffect.ts  CreatureEffectToken.d.ts  CreatureTag.ts  CreatureToken.d.ts  CreatureVariation.d.ts  CreatureVariation.ts  CreatureVariationRaw.ts  CreatureVariationRule.ts  CreatureVariationToken.d.ts  CustomGraphicExtension.d.ts  CustomGraphicExtension.ts  DFRawJson-Tauri.d.ts  DFRawJson.d.ts  Dimensions.d.ts  Dimensions.ts  Entity.d.ts  Entity.ts  EntityToken.d.ts  EnvironmentClassToken.d.ts  FuelTypeToken.d.ts  Gait.d.ts  Gait.ts  GaitModifier.d.ts  GaitType.d.ts  Graphic.d.ts  Graphic.ts  (+85 more)
lib/src/: constants.rs  default_checks.rs  error.rs  errors.rs  lib.rs  options.rs  parser.rs  regex.rs  util.rs  utilities.rs
lib/src/legends_export/: mod.rs  reader.rs  util.rs  xml_creature.rs  xml_entity.rs
lib/src/legends_export/exports/: creature.rs  entity.rs  mod.rs
lib/src/metadata/: object_type.rs  parser_options.rs  raw_metadata.rs  token_complexity.rs
lib/src/parsed_definitions/: body_size.rs  caste.rs  color.rs  creature.rs  creature_effect.rs  creature_variation.rs  custom_graphic_extension.rs  dimensions.rs  entity.rs  gait.rs  graphic.rs  info_file.rs  inorganic.rs  material.rs  material_mechanics.rs  material_template.rs  mechanical_properties.rs  milkable.rs  mod.rs  name.rs  plant.rs  plant_growth.rs  position.rs  seed_material.rs  select_creature.rs  shrub.rs  sprite_graphic.rs  sprite_layer.rs  state_names.rs  syndrome.rs  temperatures.rs  tile.rs  tile_page.rs  tree.rs
lib/src/parsed_definitions/tag_parsing/: caste.rs
lib/src/parsed_definitions/tags/: biome.rs  caste.rs  color_modification.rs  condition.rs  creature.rs  creature_effect.rs  creature_effect_property.rs  creature_variation.rs  creature_variation_rule.rs  entity.rs  environment_class.rs  fuel_type.rs  gait_modifier.rs  gait_type.rs  graphic_type.rs  growth.rs  inclusion_type.rs  inorganic.rs  material_property.rs  material_state.rs  material_type.rs  material_usage.rs  modification.rs  plant.rs  plant_graphic_template.rs  plant_growth.rs  plant_growth_type.rs  plant_part.rs  position.rs  season.rs  select_creature_rule.rs  shrub.rs  syndrome.rs  tile_page.rs  tree.rs  twig_placement.rs
lib/src/parser/: info_file.rs  material_mechanics.rs  mod.rs  module_info_file.rs  object_types.rs  parse.rs  ranges.rs  raw_location.rs  raw_locations.rs  raw_module.rs  results.rs  serializer_helper.rs
lib/src/parser/appearance_modifier/: tokens.rs
lib/src/parser/biome/: mod.rs  phf_map.rs  tokens.rs
lib/src/parser/constants/: mod.rs  refs.rs  regex.rs
lib/src/parser/creature/: gait.rs  mod.rs  phf_table.rs  raw.rs  token_parsing.rs  tokens.rs
lib/src/parser/creature_caste/: full_tokens.rs  gait.rs  mod.rs  phf_table.rs  raw.rs  token_parsing.rs  tokens.rs
lib/src/parser/creature_effect/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/creature_variation/: mod.rs  phf_table.rs  raw.rs  rules.rs  simple.rs  tokens.rs  traits.rs
lib/src/parser/entity/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/graphics/: custom_extension.rs  dimensions.rs  mod.rs  phf_table.rs  raw.rs  sprite_graphic.rs  sprite_layer.rs  tile_page.rs  tokens.rs
lib/src/parser/helpers/: absorb_select_creature.rs  apply_copy_from.rs  apply_creature_variations.rs  clone_raw_object_box.rs  clone_raw_vector.rs  mod.rs  object_id.rs  ranges.rs  serializer_helper.rs
lib/src/parser/inorganic/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/material/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/material_mechanics/: mechanics.rs  mod.rs  properties.rs
lib/src/parser/material_template/: raw.rs
lib/src/parser/metadata/: mod.rs  object.rs  raw_metadata.rs  searchable.rs  token.rs
lib/src/parser/module_info_file/: info_file.rs  mod.rs  steam_data.rs
lib/src/parser/names/: common.rs  mod.rs  singular_plural.rs  states.rs
lib/src/parser/plant/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/plant_growth/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/position/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/reader/: header.rs  mod.rs  parsable_types.rs  parse_file.rs
lib/src/parser/seed_material/: raw.rs
lib/src/parser/select_creature/: mod.rs  raw.rs  rules.rs
lib/src/parser/shrub/: mod.rs  phf_table.rs  raw.rs  tokens.rs
lib/src/parser/simple_structs/: body_size.rs  color.rs  milkable.rs  mod.rs  temperatures.rs  tile.rs
lib/src/parser/syndrome/: mod.rs  phf_table.rs  raw.rs  (+1 more)
lib/src/reader/: mod.rs  parsable_types.rs  parse_result.rs  unprocessed_raw.rs
lib/src/tauri_lib/: mod.rs  structs.rs  with_progress.rs
lib/src/traits/: creature_variation_requirements.rs  mod.rs  raw_object.rs  raw_object_token.rs  raw_object_token_to_any.rs  searchable.rs  tag_operations.rs
lib/tests/: bindings.rs
(+409 files in other folders)
