[package]
name = "dfraw_json_parser"
version = "0.14.0"
edition = "2021"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_json_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
tauri = ["dep:tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8"
encoding_rs_io = "0.1"
itertools = "0.11"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10"
serde_json = "1.0"
slug = "0.1"
typetag = "0.2"
walkdir = "2"
# Tauri feature dependency needs tauri lib
tauri = { version = "1.5", optional = true }

[dependencies.phf]
version = "0.11.2"
default-features = true
features = ["macros"]

[dependencies.serde]
version = "1"
default-features = true
features = ["derive"]

[dependencies.ts-rs]
version = "7.0"
default-features = true
features = ["serde-compat"]

[dev-dependencies]
chrono = "0.4"

[dev-dependencies.fern]
version = "0.6.2"
features = ["colored"]

[dev-dependencies.clap]
version = "4.4"
default-features = true
features = ["derive"]
