[workspace]

members = ["lib", "cli"]
resolver = "2"

# Some very strict lints.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"
[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

# These lints can be used from the cli as well:
#
# cargo clippy -- -D clippy::pedantic -D clippy::nursery -D clippy::unwrap_used -D clippy::enum_glob_use -D unreachable_patterns -D unreachable_code -D missing_docs -D unsafe_code
