[package]
name = "dfraw_json_parser"
version = "0.16.0"
edition = "2021"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_json_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
tauri = ["dep:tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8"
encoding_rs_io = "0.1"
itertools = "0.12"
lazy_static = "1.4.0"
regex = "1.10"
serde_json = "1.0"
slug = "0.1"
tracing = "0.1.40"
typetag = "0.2"
walkdir = "2"
xmlparser = "0.13.6"
quick-xml = "0.31.0"
thiserror = "1.0.58"

# Tauri feature dependency needs tauri lib
[dependencies.tauri]
version = "1.6"
optional = true

[dependencies.specta]
version = "1.0.5"
features = ["typescript", "export"]

[dependencies.phf]
version = "0.11.2"
default-features = true
features = ["macros"]

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
